# devops-labs

./: .envrc  README.md  flake.nix  justfile
deploy/: install-vm.sh  run.sh  setup.sh
deploy/nixos/: configuration.nix  mywebapp-pkg.nix
mywebapp/: .gitignore  CLAUDE.md  alembic.ini  config.example.toml  flake.nix  pyproject.toml
mywebapp/alembic/: env.py
mywebapp/alembic/versions/: e096bb92ec06_initial_schema.py
mywebapp/src/mywebapp/: app.py  cli.py  config.py  content_negotiation.py  db.py  models.py  schemas.py
mywebapp/src/mywebapp/routes/: health.py  root.py  tasks.py
nixos/: common.nix  configuration.nix  mywebapp.nix  nginx.nix  postgresql.nix  vm-interactive.nix  vm.nix
